--- a/base/global/base.html
+++ b/base/global/base.html
@@ -1,6 +1,14 @@
 {% include "global/partials/head.html" %}
 {% include "global/partials/menu.html" %}
+{% if text %}
+    <h1>{% block texto %}{% endblock texto %}</h1>
+{% endif %}
+<main class="content">
+    {% block posts %}{% endblock posts %}
+</main>
 
-    <h1>{% block texto %}BASE{% endblock texto %}</h1>
+
+
+
 </body>
 </html>
